--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,11 +11,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8.16]
 
     steps:
     - uses: actions/checkout@v3
@@ -25,8 +25,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+        # I couldn't update packages here because of sudo
+        # It is done manually, updated python3 and pip3 and python3.8-venv
+        # Note server is bionic do upgrade from apt repository
+        python3 -m venv env # this will work
+        . env/bin/activate # activate virtual env
+        python3 -m pip install -r requirements.txt
+   # - name: Run Tests
+   #   run: |
+   #     python manage.py test
